# cam-cli

./: .clangd  CMakeLists.txt  compile.sh  installdeps.sh  main.cpp  run.sh
src/: CMakeLists.txt  main.cpp
src/pw-man/: CMakeLists.txt  cryptography.cpp  filecommands.cpp  manager.cpp  manager.h
src/scripts/: CMakeLists.txt  ensureFile.sh  test.sh  wipeFile.sh
src/util/: CMakeLists.txt  constants.h  iohelper.cpp  iohelper.h
